--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# gradle
+.gradle/
+gradlew
+gradlew.bat
+
+# idea
+.iml
+
+# eclipse
+.project
+.classpath
+.settings
+
+# output
+bin/
+out/
+build/
