--- a/spring-boot-batch/build.gradle
+++ b/spring-boot-batch/build.gradle
@@ -21,4 +21,5 @@ dependencies {
     compileOnly('org.projectlombok:lombok')
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile('org.springframework.batch:spring-batch-test')
 }
