--- a/spring-boot-admin/web/build.gradle
+++ b/spring-boot-admin/web/build.gradle
@@ -1,31 +1,42 @@
 buildscript {
+    ext {
+        springBootVersion = '1.5.16.RELEASE'
+    }
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.14.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
-group 'com.zzizily.skeleton.sample'
-version '1.0-SNAPSHOT'
-
+group = 'com.zzizily.skeleton.spring.boot.admin'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
+}
+
+
+ext {
+    springBootAdminVersion = '1.5.7'
 }
 
 dependencies {
-    compile("org.jolokia:jolokia-core")
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '1.5.7'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('de.codecentric:spring-boot-admin-starter-client')
+    runtime('org.springframework.boot:spring-boot-devtools')
+    compileOnly('org.projectlombok:lombok')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+    }
 }
