단순 변수 선언 및 간단한 수정

--- a/spring-boot-admin/web/build.gradle
+++ b/spring-boot-admin/web/build.gradle
@@ -12,10 +12,12 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
 
 group = 'com.zzizily.skeleton.spring.boot.admin'
-version = '0.0.1-SNAPSHOT'
+//version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
@@ -25,6 +27,10 @@ repositories {
 
 ext {
     springBootAdminVersion = '1.5.7'
+}
+
+war {
+    baseName = "ROOT"
 }
 
 dependencies {
