--- a/spring-boot-admin/web/src/main/resources/application.yml
+++ b/spring-boot-admin/web/src/main/resources/application.yml
@@ -24,8 +24,8 @@ logging:
   path: log
 
 info:
-  source: http://alm.dams.com:8080/gitblit
-  build: http://alm.dams.com:8080/jenknis
+  source: http://alm.zzizily.com:8080/gitblit
+  build: http://alm.zzizily.com:8080/jenknis
   profile: ${spring.profile.active}
 
 endpoints:
